; ModuleID = '/home/carl/AnghaBench/nanomsg/src/aio/extr_fsm.c_nn_fsm_raise_from_src.c'
source_filename = "/home/carl/AnghaBench/nanomsg/src/aio/extr_fsm.c_nn_fsm_raise_from_src.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nn_fsm = type { i32, i32 }
%struct.nn_fsm_event = type { i32, i32, i32, %struct.nn_fsm* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @nn_fsm_raise_from_src(%struct.nn_fsm* %0, %struct.nn_fsm_event* %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.nn_fsm*, align 8
  %6 = alloca %struct.nn_fsm_event*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.nn_fsm* %0, %struct.nn_fsm** %5, align 8
  store %struct.nn_fsm_event* %1, %struct.nn_fsm_event** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %9 = load %struct.nn_fsm*, %struct.nn_fsm** %5, align 8
  %10 = load %struct.nn_fsm_event*, %struct.nn_fsm_event** %6, align 8
  %11 = getelementptr inbounds %struct.nn_fsm_event, %struct.nn_fsm_event* %10, i32 0, i32 3
  store %struct.nn_fsm* %9, %struct.nn_fsm** %11, align 8
  %12 = load i32, i32* %7, align 4
  %13 = load %struct.nn_fsm_event*, %struct.nn_fsm_event** %6, align 8
  %14 = getelementptr inbounds %struct.nn_fsm_event, %struct.nn_fsm_event* %13, i32 0, i32 0
  store i32 %12, i32* %14, align 8
  %15 = load %struct.nn_fsm*, %struct.nn_fsm** %5, align 8
  %16 = getelementptr inbounds %struct.nn_fsm, %struct.nn_fsm* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 4
  %18 = load %struct.nn_fsm_event*, %struct.nn_fsm_event** %6, align 8
  %19 = getelementptr inbounds %struct.nn_fsm_event, %struct.nn_fsm_event* %18, i32 0, i32 2
  store i32 %17, i32* %19, align 8
  %20 = load i32, i32* %8, align 4
  %21 = load %struct.nn_fsm_event*, %struct.nn_fsm_event** %6, align 8
  %22 = getelementptr inbounds %struct.nn_fsm_event, %struct.nn_fsm_event* %21, i32 0, i32 1
  store i32 %20, i32* %22, align 4
  %23 = load %struct.nn_fsm*, %struct.nn_fsm** %5, align 8
  %24 = getelementptr inbounds %struct.nn_fsm, %struct.nn_fsm* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = load %struct.nn_fsm_event*, %struct.nn_fsm_event** %6, align 8
  %27 = call i32 @nn_ctx_raise(i32 %25, %struct.nn_fsm_event* %26)
  ret void
}

declare dso_local i32 @nn_ctx_raise(i32, %struct.nn_fsm_event*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
